--- a/MiniShop/src/main/resources/application.properties
+++ b/MiniShop/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 #MySql Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/testdb
-spring.datasource.username=jhkim
+spring.datasource.username=ys
 spring.datasource.password=1234
 
 #Mybatis Aliases Setting
