--- a/MiniShop/src/main/resources/application.properties
+++ b/MiniShop/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 #MySql Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/testdb
-spring.datasource.username=ys
+spring.datasource.username=jhkim
 spring.datasource.password=1234
 
 #Mybatis Aliases Setting
@@ -19,4 +19,6 @@ spring.web.resources.static-locations=classpath:/static/**
 
 mybatis.mapper-locations:classpath:mapper/*.xml
 
-
+#이미지 용량 크기 설정
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
