--- a/MiniShop/src/main/resources/application.properties
+++ b/MiniShop/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 #MySql Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
+spring.datasource.url=jdbc:mysql://localhost:3307/Project
 spring.datasource.username=root
 spring.datasource.password=1234
 
